--- a/grumpling_dumplings/index.html
+++ b/grumpling_dumplings/index.html
@@ -118,7 +118,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="logo.png" alt="Grumbling Dumpling Logo" class="logo">
+            <img src="/src/logo.png" alt="Grumbling Dumpling Logo" class="logo">
             <h1>Frozen Premium Dimsum</h1>
         </header>
 
@@ -199,27 +199,27 @@
 
             <section class="image-gallery">
                 <figure>
-                    <img src="xiao longbao.png" alt="Xiao Long Bao">
+                    <img src="/src/xiao longbao.png" alt="Xiao Long Bao">
                     <figcaption>Xiao Long Bao</figcaption>
                 </figure>
                 <figure>
-                    <img src="kikiam.png" alt="Special Kikiam">
+                    <img src="/src/kikiam.png" alt="Special Kikiam">
                     <figcaption>Special Kikiam</figcaption>
                 </figure>
                 <figure>
-                    <img src="hakaw.png" alt="Hakaw">
+                    <img src="/src/hakaw.png" alt="Hakaw">
                     <figcaption>Hakaw</figcaption>
                 </figure>
                 <figure>
-                    <img src="siopao.png" alt="Siopao">
+                    <img src="/src/siopao.png" alt="Siopao">
                     <figcaption>Siopao</figcaption>
                 </figure>
                 <figure>
-                    <img src="spareribs.png" alt="Spareribs">
+                    <img src="/src/spareribs.png" alt="Spareribs">
                     <figcaption>Spareribs</figcaption>
                 </figure>
                 <figure>
-                    <img src="roll.png" alt="Beancurd Roll">
+                    <img src="/src/roll.png" alt="Beancurd Roll">
                     <figcaption>Beancurd Roll</figcaption>
                 </figure>
             </section>
