--- a/grumpling_dumplings/index.html
+++ b/grumpling_dumplings/index.html
@@ -119,7 +119,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="src/logo.png" alt="Grumbling Dumpling Logo" class="logo">
+            <img src="/dumpling/src/logo.png" alt="Grumbling Dumpling Logo" class="logo">
             <h1>Frozen Premium Dimsum</h1>
         </header>
 
@@ -200,27 +200,27 @@
 
             <section class="image-gallery">
                 <figure>
-                    <img src="src/xiao longbao.png" alt="Xiao Long Bao">
+                    <img src="/dumpling/src/xiao longbao.png" alt="Xiao Long Bao">
                     <figcaption>Xiao Long Bao</figcaption>
                 </figure>
                 <figure>
-                    <img src="src/kikiam.png" alt="Special Kikiam">
+                    <img src="/dumpling/src/kikiam.png" alt="Special Kikiam">
                     <figcaption>Special Kikiam</figcaption>
                 </figure>
                 <figure>
-                    <img src="src/hakaw.png" alt="Hakaw">
+                    <img src="/dumpling/src/hakaw.png" alt="Hakaw">
                     <figcaption>Hakaw</figcaption>
                 </figure>
                 <figure>
-                    <img src="src/siopao.png" alt="Siopao">
+                    <img src="/dumpling/src/siopao.png" alt="Siopao">
                     <figcaption>Siopao</figcaption>
                 </figure>
                 <figure>
-                    <img src="src/spareribs.png" alt="Spareribs">
+                    <img src="/dumpling/src/spareribs.png" alt="Spareribs">
                     <figcaption>Spareribs</figcaption>
                 </figure>
                 <figure>
-                    <img src="src/roll.png" alt="Beancurd Roll">
+                    <img src="/dumpling/src/roll.png" alt="Beancurd Roll">
                     <figcaption>Beancurd Roll</figcaption>
                 </figure>
             </section>
