--- a/grumpling_dumplings/frontend/index.html
+++ b/grumpling_dumplings/frontend/index.html
@@ -594,9 +594,7 @@
 
     <script>
         // API Configuration
-        const API_URL = window.location.hostname === 'localhost' 
-            ? 'http://localhost:3000/api' 
-            : '/api';
+        const API_URL = '/api';
 
         // Cart state
         let cart = [];
