--- a/grumpling_dumplings/frontend/index.html
+++ b/grumpling_dumplings/frontend/index.html
@@ -274,7 +274,7 @@
 
     <div class="container">
         <header>
-            <img src="logo.png" alt="Grumbling Dumpling Logo" class="logo">
+            <img src="src/logo.png" alt="Grumbling Dumpling Logo" class="logo">
             <h1>Frozen Premium Dimsum</h1>
         </header>
 
@@ -324,12 +324,12 @@
             </section>
 
             <section class="image-gallery">
-                <figure><img src="xiao longbao.png" alt="Xiao Long Bao"><figcaption>Xiao Long Bao</figcaption></figure>
-                <figure><img src="kikiam.png" alt="Special Kikiam"><figcaption>Special Kikiam</figcaption></figure>
-                <figure><img src="hakaw.png" alt="Hakaw"><figcaption>Hakaw</figcaption></figure>
-                <figure><img src="siopao.png" alt="Siopao"><figcaption>Siopao</figcaption></figure>
-                <figure><img src="spareribs.png" alt="Spareribs"><figcaption>Spareribs</figcaption></figure>
-                <figure><img src="roll.png" alt="Beancurd Roll"><figcaption>Beancurd Roll</figcaption></figure>
+                <figure><img src="src/xiao longbao.png" alt="Xiao Long Bao"><figcaption>Xiao Long Bao</figcaption></figure>
+                <figure><img src="src/kikiam.png" alt="Special Kikiam"><figcaption>Special Kikiam</figcaption></figure>
+                <figure><img src="src/hakaw.png" alt="Hakaw"><figcaption>Hakaw</figcaption></figure>
+                <figure><img src="src/siopao.png" alt="Siopao"><figcaption>Siopao</figcaption></figure>
+                <figure><img src="src/spareribs.png" alt="Spareribs"><figcaption>Spareribs</figcaption></figure>
+                <figure><img src="src/roll.png" alt="Beancurd Roll"><figcaption>Beancurd Roll</figcaption></figure>
             </section>
         </main>
 
@@ -343,6 +343,7 @@
             <ul>
                 <li>Email: grumblingfordumpling@gmail.com</li>
                 <li>CP/Viber/Whatsapp: +63917 812 4577</li>
+                <li>Powered by JN Adlaon https://github.com/lordwhisss014/lordwhisss014</li>
             </ul>
         </div>
         <div class="order-info">
