--- a/grumpling_dumplings/frontend/index.html
+++ b/grumpling_dumplings/frontend/index.html
@@ -6,20 +6,8 @@
     <title>Grumbling Dumpling - Frozen Premium Dimsum</title>
     <style>
         /* --- ORIGINAL STYLES --- */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f8f8f8;
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f8f8f8; color: #333; }
+        .container { max-width: 800px; margin: auto; background-color: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         header { text-align: center; margin-bottom: 40px; }
         .logo { max-width: 150px; height: auto; }
         h1 { color: #d32f2f; font-size: 2.5em; margin-top: 10px; text-transform: uppercase; }
@@ -313,6 +301,7 @@
                         <button class="btn btn-cart" onclick="addToCart('Chili Sauce (100ml)', 125)">Add to Cart</button>
                     </li>
                 </ul>
+                
                 <h2>Made to Order <br> (Min of 5 per kind)</h2>
                 <ul class="menu-list">
                     <li class="menu-item">
@@ -320,7 +309,51 @@
                         <span class="item-price">₱335</span>
                         <button class="btn btn-cart" onclick="addToCart('Pork & Shrimp Wanton (12 Pcs)', 335)">Add to Cart</button>
                     </li>
-                    </ul>
+                    <li class="menu-item">
+                        <span class="item-name">Xiao Long Bao <br> 12 Pcs</span>
+                        <span class="item-price">₱335</span>
+                        <button class="btn btn-cart" onclick="addToCart('Xiao Long Bao (12 Pcs)', 335)">Add to Cart</button>
+                    </li>
+                    <li class="menu-item">
+                        <span class="item-name">Kuchay Dumpling <br> 12 Pcs</span>
+                        <span class="item-price">₱350</span>
+                        <button class="btn btn-cart" onclick="addToCart('Kuchay Dumpling (12 Pcs)', 350)">Add to Cart</button>
+                    </li>
+                    <li class="menu-item">
+                        <span class="item-name">Taosi Spareribs <br> Approx. 500g</span>
+                        <span class="item-price">₱370</span>
+                        <button class="btn btn-cart" onclick="addToCart('Taosi Spareribs (500g)', 370)">Add to Cart</button>
+                    </li>
+                    <li class="menu-item">
+                        <span class="item-name">Chicken Feet <br> Approx. 500g</span>
+                        <span class="item-price">₱250</span>
+                        <button class="btn btn-cart" onclick="addToCart('Chicken Feet (500g)', 250)">Add to Cart</button>
+                    </li>
+                    <li class="menu-item">
+                        <span class="item-name">Taipao Bola <br> 1 Pc</span>
+                        <span class="item-price">₱150</span>
+                        <button class="btn btn-cart" onclick="addToCart('Taipao Bola (1 Pc)', 150)">Add to Cart</button>
+                    </li>
+                </ul>
+
+                <h2>More Dimsum Favorites</h2>
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <span class="item-name">Hakaw <br> 12 Pcs</span>
+                        <span class="item-price">₱335</span>
+                        <button class="btn btn-cart" onclick="addToCart('Hakaw (12 Pcs)', 335)">Add to Cart</button>
+                    </li>
+                    <li class="menu-item">
+                        <span class="item-name">Beancurd Roll <br> 7 Pcs</span>
+                        <span class="item-price">₱295</span>
+                        <button class="btn btn-cart" onclick="addToCart('Beancurd Roll (7 Pcs)', 295)">Add to Cart</button>
+                    </li>
+                    <li class="menu-item">
+                        <span class="item-name">Special Japanese Siomai <br> 12 Pcs</span>
+                        <span class="item-price">₱335</span>
+                        <button class="btn btn-cart" onclick="addToCart('Special Japanese Siomai (12 Pcs)', 335)">Add to Cart</button>
+                    </li>
+                </ul>
             </section>
 
             <section class="image-gallery">
@@ -343,7 +376,6 @@
             <ul>
                 <li>Email: grumblingfordumpling@gmail.com</li>
                 <li>CP/Viber/Whatsapp: +63917 812 4577</li>
-                <li>Powered by JN Adlaon https://github.com/lordwhisss014/lordwhisss014</li>
             </ul>
         </div>
         <div class="order-info">
